--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.13.0",
     "mongoose": "^4.4.9",
     "morgan": "^1.7.0",
+    "node-yelp": "0.0.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   }
