--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_DATABASE_URL = 'mongodb://<dbuser>:<dbpassword>@ds027295.mlab.com:27295/foodwithfriends'
+MONGO_DATABASE_URL = 'mongodb://heroku_hmltr69l:password1@ds027295.mlab.com:27295/foodwithfriends'
