--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_DATABASE_URL ='mongodb://heroku_hmltr69l:gh97iovcdsp7n4oethecipspj0@ds025459.mlab.com:25459/heroku_hmltr69l'
+MONGOLAB_URI ='mongodb://heroku_hmltr69l:gh97iovcdsp7n4oethecipspj0@ds025459.mlab.com:25459/heroku_hmltr69l'
