--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGOLAB_URI='mongodb://heroku_n9mzqprs:password1@ds011251.mlab.com:11251/heroku_n9mzqprs'
+MONGOLAB_URI='mongodb://tammerg1:password1@ds011251.mlab.com:11251/heroku_n9mzqprs'
