--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGOLAB_URI ='mongodb://heroku_n9mzqprs:ncflorqpso0tap853a0m31ueqn@ds011251.mlab.com:11251/heroku_n9mzqprs'
+MONGOLAB_URI='mongodb://heroku_3rtj0nf1:cqiksmdodkhfujudh7oks0nhjp@ds011321.mlab.com:11321/heroku_3rtj0nf1'
