--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-yelp": "0.0.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "randomstring": "^1.1.4",
     "twilio": "^2.9.1"
   }
 }
