--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Alexg2195/Food-With-Friends#readme",
   "dependencies": {
+    "angular-easyfb": "^1.4.4",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.0",
     "dotenv": "^2.0.0",
@@ -27,6 +28,7 @@
     "express-session": "^1.13.0",
     "mongoose": "^4.4.9",
     "morgan": "^1.7.0",
+    "ng-facebook": "^0.1.6",
     "node-yelp": "0.0.3",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.0",
