--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Alexg2195/Food-With-Friends#readme",
   "dependencies": {
     "bcryptjs": "^2.3.0",
+    "bluebird": "^3.3.5",
     "body-parser": "^1.15.0",
     "dotenv": "^2.0.0",
     "ejs": "^2.4.1",
