--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.13.0",
     "mongoose": "^4.4.9",
     "morgan": "^1.7.0",
+    "node-geocoder": "^3.9.1",
     "node-yelp": "0.0.3",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.0",
