--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Alexg2195/Food-With-Friends#readme",
   "dependencies": {
+    "angular-google-maps": "^2.3.2",
     "bcryptjs": "^2.3.0",
     "bluebird": "^3.3.5",
     "body-parser": "^1.15.0",
@@ -28,6 +29,7 @@
     "express-session": "^1.13.0",
     "mongoose": "^4.4.9",
     "morgan": "^1.7.0",
+    "node-geocoder": "^3.9.1",
     "node-yelp": "0.0.3",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.0",
