--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
     "passport-facebook": "^2.1.0",
     "passport-local": "^1.0.0",
     "randomstring": "^1.1.4",
-    "twilio": "^2.9.1"
-  },
-  "devDependencies": {
+    "twilio": "^2.9.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^2.0.0",
@@ -44,5 +42,14 @@
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
     "jshint": "^2.9.2"
-  }
+  },
+  /*"devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.5.3",
+    "jshint": "^2.9.2"
+  }*/
 }
